--- a/notificacoes/package.json
+++ b/notificacoes/package.json
@@ -18,7 +18,7 @@
     "expo": "~54.0.29",
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
-    "expo-notifications": "~0.32.15",
+    "expo-notifications": "^0.32.15",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-updates": "~29.0.15",
