--- a/notificacoes/package.json
+++ b/notificacoes/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/stack": "^7.6.12",
     "@supabase/supabase-js": "^2.87.1",
     "axios": "^1.13.2",
+    "eas": "^0.1.0",
+    "eas-cli": "^0.0.0",
     "expo": "~54.0.29",
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
